# napari-3d-counter

./: .gitignore  README.md  gui_demo.py  launch_napari.py  paper.bib  paper.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: make_html.py  makefile  template.html
examples/: launch_count_3d.py  launch_ingress_points.py  launch_reconstruct_selected.py  launch_split_on_shapes.py
src/napari_3d_counter/: __init__.py  _reader.py  _widget.py  aux_functions.py  celltype_config.py  commands.py  launch_napari.py  napari.yaml  worker_functions.py
src/napari_3d_counter/_tests/: bad.csv  test_aux.py  test_aux_functions.py  test_celltype_config.py  test_commands.py  test_empty.csv  test_point.csv  test_python_gen.py  test_reader.py  test_reconstruct.py  test_sample_data.py  test_widget.py  test_writer.py
