[metadata]
name = napari-3d-counter

description = A simple plugin for counting objects in 3D images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pnewstein/napari-3d-counter
author = Peter Newstein
author_email = peternewstein@gmail.com
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/pnewstein/napari-3d-counter/issues
    Documentation = https://github.com/pnewstein/napari-3d-counter#README.md
    Source Code = https://github.com/pnewstein/napari-3d-counter
    User Support = https://github.com/pnewstein/napari-3d-counter/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    pandas
    scikit-image
    napari==0.6.2

python_requires = >=3.10
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-3d-counter = napari_3d_counter:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5


[options.package_data]
* = *.yaml
